index.html 업데이트

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>야구 포인트 랜덤 생성기</title>
+    <title>랜덤 투구/타격 코스 설정</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -85,7 +85,8 @@
 </head>
 <body>
 
-<h1>야구 포인트 랜덤 생성기</h1>
+<h1>랜덤 투구/타격 코스 설정</h1>
+<h1>Random Pitching/Batting Course Selector</h1>
 
 <div id="game-zone-container">
     <!-- 좌측 타자 -->
