--- a/index.html
+++ b/index.html
@@ -78,6 +78,15 @@
             font-size: 18px;
             font-weight: bold;
         }
+        .translation {
+            margin-top: 10px;
+            font-size: 14px;
+            color: black;
+        }
+        .translation-english {
+            font-size: 12px;
+            color: gray;
+        }
     </style>
 </head>
 <body>
@@ -99,6 +108,13 @@
 </div>
 
 <button onclick="generateRandomPoint()">랜덤 포인트 생성</button>
+
+<div class="translation">
+    생성된 포인트를 확인하세요.
+</div>
+<div class="translation-english">
+    Check the generated point.
+</div>
 
 <p id="random-point">생성된 포인트: </p>
 
