index.html 업데이트

--- a/index.html
+++ b/index.html
@@ -110,13 +110,13 @@
 <button onclick="generateRandomPoint()">랜덤 포인트 생성</button>
 
 <div class="translation">
-    생성된 포인트를 확인하세요.
+    생성된 코스를 확인하세요.
 </div>
 <div class="translation-english">
     Check the generated point.
 </div>
 
-<p id="random-point">생성된 포인트: </p>
+<p id="random-point">생성된 코스: </p>
 
 <script>
     function generateRandomPoint() {
