index.html 업데이트

--- a/index.html
+++ b/index.html
@@ -107,11 +107,11 @@
     <div class="cell">9</div>
 </div>
 
-<button onclick="generateRandomPoint()">랜덤 포인트 생성</button>
+<button onclick="generateRandomPoint()">Click here!</button>
 
 
 
-<p id="random-point">생성된 코스: </p>
+
 
 <script>
     function generateRandomPoint() {
