index.html 업데이트

--- a/index.html
+++ b/index.html
@@ -93,6 +93,10 @@
 </head>
 <body>
 
+<!--홈 아이콘 위치 지정--> 
+<a href="index.html"><img src="https://img1.daumcdn.net/thumb/R1280x0/?scode=mtistory2&fname=https%3A%2F%2Fblog.kakaocdn.net%2Fdn%2FbbqJdy%2FbtszAY8E0nn%2F2ces7gFBw4k8siK5xJxOb0%2Fimg.png" width="90px"></a>
+<!--여기까지 복사해서 가져가면 됩니다-->
+
 <h1>랜덤 투구/타격 코스 설정</h1>
 <h1>Random Pitching/Batting Course Selector</h1>
 <a id="by-shp98" href="https://goodstock18.tistory.com/m/entry/Bookmark-Collection" target="_blank">by.shp98</a>
